// file: pkg/notification/proto/requests/delete_notification_request.proto
// version: 1.0.0
// guid: 20a32413-3de3-416f-a3ad-23c2172121c9

edition = "2023";

package gcommon.v1.notification;

import "pkg/common/proto/request_metadata.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/notification/proto";

message DeleteNotificationRequest {
  // Identifier of the notification to delete.
  string notification_id = 1;

  // Request metadata for auditing
  gcommon.v1.common.RequestMetadata metadata = 2 [lazy = true];
}
