// filepath: pkg/notification/proto/messages/delivery_channel.proto
// file: notification/proto/messages/delivery_channel.proto
//
// Channel configuration for delivering notifications.
edition = "2023";

package gcommon.v1.notification;

import "google/protobuf/go_features.proto";

option go_package = "../../../../pkg/notification/pb;notificationpb";
option features.(pb.go).api_level = API_HYBRID;

// Delivery channel type enumeration
enum DeliveryChannelType {
  DELIVERY_CHANNEL_TYPE_UNSPECIFIED = 0;
  DELIVERY_CHANNEL_TYPE_EMAIL = 1;
  DELIVERY_CHANNEL_TYPE_SMS = 2;
  DELIVERY_CHANNEL_TYPE_SLACK = 3;
  DELIVERY_CHANNEL_TYPE_WEBHOOK = 4;
}

/**
 * Delivery channel specifying how a notification is sent.
 */
message DeliveryChannel {
  // Channel type such as email or SMS
  DeliveryChannelType type = 1;

  // Destination address (email, phone number, webhook URL, etc.)
  string target = 2;

  // Optional channel specific configuration
  map<string, string> config = 3 [lazy = true];
}
