// file: pkg/notification/proto/responses/delete_notification_response.proto
// version: 1.0.0
// guid: d7f015d6-70a1-4fcd-82b3-560a134d7a45

edition = "2023";

package gcommon.v1.notification;

import "google/protobuf/go_features.proto";

option go_package = "../../../../pkg/notification/pb;notificationpb";
option features.(pb.go).api_level = API_HYBRID;

/**
 * Response after deleting a notification.
 */
message DeleteNotificationResponse {
  // True if the deletion succeeded.
  bool success = 1;
}
