// file: pkg/notification/proto/responses/mark_as_read_response.proto
// version: 1.0.0
// guid: 1fd2817b-1b04-474f-ba5b-190ee82693bd

edition = "2023";

package gcommon.v1.notification;

import "google/protobuf/go_features.proto";

option go_package = "../../../../pb;notificationpb";
option features.(pb.go).api_level = API_HYBRID;

/**
 * Response for marking a notification as read.
 */
message MarkAsReadResponse {
  // True if the operation succeeded.
  bool success = 1;
}
