// file: pkg/notification/proto/requests/update_preferences_request.proto
// version: 1.0.0
// guid: c74c733f-1a03-4b74-b5f1-cfa062e66475

edition = "2023";

package gcommon.v1.notification;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/request_metadata.proto";

option features.(pb.go).api_level = API_OPAQUE;

message UpdatePreferencesRequest {
  // Subscription preferences to apply
  SubscriptionPreferences preferences = 1 [lazy = true];

  // Request metadata for auditing
  gcommon.v1.common.RequestMetadata metadata = 2 [lazy = true];
}
