// file: proto/gcommon/v1/common/messages/list_notifications_response.proto
// version: 1.0.0
// guid: 7986e6b9-6a3e-4b7e-b093-5a87133742a3

edition = "2023";

package gcommon.v1.common.messages;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/common/messages/notification_message.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package gcommon.v1.common.messages;

/**
 * Response containing a list of notifications.
 */
message ListNotificationsResponse {
  // Notifications sorted by creation time descending.
  repeated NotificationMessage notifications = 1;
}
